Fixes margin bug on detailed hero image copy.
The detailed version of the hero image copy had a right-margin on it, which caused it to push too far to the left. This update fixes that issue.

--- a/sass/modules/_homepage-hero.scss
+++ b/sass/modules/_homepage-hero.scss
@@ -115,11 +115,15 @@
 	
 	.homepage-hero-img-detailed &{
 		//box model
-		margin-left: 0;
-		padding: 0 2%;
+		margin-right: 0;
+		padding: 0 .5em;
 		//backgrounds & borders
 		background-color: transparentize($blueberry-susan, .5);
 		border-radius: 2px;
+		
+		@media screen and (min-width: 22em){
+			padding: 0 1em;
+		}
 	}
 	
 	.homepage-hero-special &{
